--- a/app/src/main/res/layout/fragment_consult_profil.xml
+++ b/app/src/main/res/layout/fragment_consult_profil.xml
@@ -25,7 +25,8 @@
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             android:paddingTop="10dp">
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/profil_check_avatar"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
