--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <color name="colorPrimaryLight">#5AD3D3</color>
     <color name="colorPrimaryMedLight">#32C6C6</color>
-    <color name="colorPrimary">#0FBDBD</color>
+    <color name="colorPrimary">#0fbdbd</color>
     <color name="colorPrimaryMedDark">#009C9C</color>
     <color name="colorPrimaryDark">#007676</color>
 
