--- a/app/src/main/res/layout/question_edit_element.xml
+++ b/app/src/main/res/layout/question_edit_element.xml
@@ -100,8 +100,7 @@
             android:drawableEnd="@drawable/ic_fleche_droite"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:text="Ouvrir la liste"
-            android:textColor="@color/colorPrimary" />
+            android:text="Ouvrir la liste" />
     </com.balysv.materialripple.MaterialRippleLayout>
     <View
         android:layout_width="match_parent"
